style updates, ng-hide/show changed to collapse, project description fixed

--- a/style/css/style.scss
+++ b/style/css/style.scss
@@ -71,5 +71,10 @@ ol{
 		.btn{
 			margin-left: 1%;
 		}
+		.projectListItem{
+			&:hover{
+				cursor:pointer;
+			}
+		}
 	}
 }
